Alignment Correction

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -199,7 +199,7 @@ article {
   margin-top: 50px;
   //font-family: 'Abel', sans-serif;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   margin-inline-end: 600px;
   color: #a6bdbf;
   font-weight: lighter;
@@ -207,7 +207,7 @@ article {
   @media only screen and (max-width: 600px) {
     margin-top: 30px;
     margin-inline-end: 0px;
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
 }
 
