--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -2,13 +2,15 @@
   width: 90px;
   padding: 30px;
   transition: all .3s ease-in-out;
+  margin: 10px;
+  vertical-align: middle;
 
   &:hover {
     filter: grayscale(0%);
   }
 
   @media only screen and (max-width: 600px) {
-    padding: 8px;
+    padding: 0px;
     width: 67px;
   }
 }
@@ -45,16 +47,17 @@
 }
 
 .logo-container {
-  max-width: 1000px;
-  margin-left: 50px;
+  max-width: 1200px;
+ // margin-left: 50px;
   margin-bottom: 450px;
+
 
   @media only screen and (max-width: 600px) {
     margin-bottom: 120px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 95%;
+    width: 90%;
   }
 }
 
